# captchapi

./: .gitignore  Cargo.toml  wrangler.toml
src/: lib.rs  utils.rs
src/public/html/: index.html
src/public/static/css/: index.css
src/public/static/js/: index.js
src/routes/: captcha.rs  generate.rs  index.rs  mod.rs  status.rs
