[package]
name = "captchapi"
version = "0.1.0"
edition = "2021"
authors = [ "GitGinocchio <giuliotognetto0208@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
serde_json = "1.0.140"
getrandom = { version = "0.3", features = ["wasm_js"] }
base64 = "0.22.1"
